# dense

./: README.md
cnn/: CMakeLists.txt
cnn/src/: main.cc  model.cc  model.h  training.cc  training.h
dense/source/base/: data_loader.h  device.cc  device.h  safe_tensors.cc  safe_tensors.h  storage.cc  storage.h  tensor.cc  tensor.h  tensor_string.cc
dense/source/layer/: batch_norm.cc  batch_norm.h  cnn.h  conv2d.cc  conv2d.h  drop_path.cc  drop_path.h  dropout.cc  dropout.h  embedding.cc  embedding.h  flatten.cc  flatten.h  gelu.cc  gelu.h  init.cc  init.h  layer.cc  layer.h  layer_norm.cc  layer_norm.h  linear.cc  linear.h  multi_head_attention.cc  multi_head_attention.h  patch_embed.cc  patch_embed.h  pooling.cc  pooling.h  relu.cc  relu.h  residual.cc  residual.h  sequential.cc  sequential.h  softmax.cc  softmax.h  token_split.cc  token_split.h
dense/source/loss/: cross_entropy_loss.cc  cross_entropy_loss.h  loss.h
dense/source/math/: vec_math.h  vec_math_blas.cc  vec_math_native.cc
dense/source/optim/: adamw.cc  adamw.h  cosine_warm_restarts.cc  cosine_warm_restarts.h  lr_scheduler.h  optimizer.h
gpt2/: CMakeLists.txt
gpt2/src/: kv_cache.cc  kv_cache.h  main.cc  model.cc  model.h  sampling.h  text_data_loader.cc  text_data_loader.h  training.cc  training.h
vit/: CMakeLists.txt
vit/src/: image_transform.cc  image_transform.h  main.cc  mnist_loader.cc  mnist_loader.h  model.cc  model.h  training.cc  training.h
